# act-smoothe-evaluation

./: .gitignore  .gitmodules  QKV.py  QKV_new.py  README.md
act-backends/: QKV  QKV_new
asm/: compiled_qkv.py
backends/: QKV
cost-models/QKV/: smoothe.rs
cost-models/QKV_new/: model.py  smoothe.rs
docker/: Dockerfile.amd64  Dockerfile.arm64  build.sh  entrypoint.sh  requirements.yml  smoothe-env.yaml  smoothe-requirements.txt
examples/QKV_new/: QKV_new.py
generators/backend/: README.md  __init__.py  alpha_utils.py  generator.py  ir_buffer_rs_generator.py  ir_egraph_rs_generator.py  isel_alpha_rs_generator.py  isel_applier_rs_generator.py  isel_ir2isa_rewrites_rs_generator.py  isel_ir2isa_rewrites_txt_generator.py  template_loader.py  (+4 more)
scripts/: README.md  build_backend.sh  compile_hlo.sh  compile_target.sh  docker.sh  enter_docker.sh  exec.sh  generate.sh  run_docker.sh  test_build_run_backend.sh
targets/QKV_new/backend/: Cargo.toml  build.rs
targets/QKV_new/backend/cpp/malloc/: CMakeLists.txt
targets/QKV_new/backend/cpp/malloc/include/: constraint.h  instructions.h  storage.h  tensor.h
targets/QKV_new/backend/cpp/malloc/src/: act_malloc.cc  globals.cc  parser.cc
targets/QKV_new/backend/src/cost/: mod.rs
targets/QKV_new/backend/src/ir/: buffer.rs  egraph.rs  mod.rs  pii.rs
targets/QKV_new/backend/src/isel/extractor/: fast.rs  lib.rs  slow.rs
targets/QKV_new/backend/src/isel/rewrites/: applier.rs  ir2ir_rewrites.txt  ir2isa_rewrites.rs  ir2isa_rewrites.txt  lib.rs  mod.rs
tests/: conftest.py  pytest.sh  test_qkv.py  test_qkv_improved.py  test_qkv_new.py  test_qkv_new_improved.py
(+98 files in other folders)
